# pymod_google_suggest

./: Makefile  Pipfile  setup.cfg  temp
google_suggest/: __init__.py  __main__.py  core.py  keyword.py  suggestion.py
src/google_suggest/: __init__.py  __main__.py  google_suggest.py  suggestion.py
