[metadata]
name = google_suggest
version = attr: google_suggest.__version__
url = https://github.com/kazuya-k-ishibashi/google_suggest
author = kishibashi
author_email = kazuya.ishibashi.wn@gmail.com
license = MIT
description = description
long_description = file: README.md

[options]
zip_sage = False
packages = find:
install_requires =
  argparse
  requests

