[metadata]
name = google_suggest
version = 0.0.1
author = kishibashi
author_email = kazuya.ishibashi.wn@gmail.com
url = https://github.com/kazuya-k-ishibashi/google_suggest
description = description
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
package_dir =
    =src
packages = find:
install_requires =
  argparse
  requests
  asyncio
  aiohttp

[options.packages.find]
where = src
